# ziptax-python

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml  version-check.yml
docs/: ACTUAL_API_STRUCTURE.md  API_FIELD_MAPPING.md  VERSIONING.md  spec.yaml
examples/: async_usage.py  basic_usage.py  error_handling.py  quick_test.py  taxcloud_orders.py
scripts/: bump_version.py
src/ziptax/: __init__.py  client.py  config.py  exceptions.py
src/ziptax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ziptax/models/: __init__.py  responses.py
src/ziptax/resources/: __init__.py  functions.py
src/ziptax/utils/: __init__.py  http.py  retry.py  validation.py
tests/: __init__.py  conftest.py  test_client.py  test_functions.py  test_http.py  test_retry.py
